Fix for http://webtrees.net/forums/10-help-for-ver-10-latest-release/3374-welcome-block-horiz-scrollbar-safari-5 Refactor front page block and blockcontent and remove unneeded code

--- a/themes/clouds/style.css
+++ b/themes/clouds/style.css
@@ -212,8 +212,6 @@ text-align: right;
 /*	End Toplinks Section				 */
 
 /*   Edit Facts */
-
-
 td.descriptionbox div a {
 color: white;
 }
@@ -247,7 +245,7 @@ margin-left:5px;
 
 .title .gedcomtitle {
 text-decoration:none;
-	color: #003399;
+color: #003399;
 }
 
 p.center a {
@@ -280,11 +278,6 @@ p.center .warning, tr td.optionbox span.error, span.error {
 color:#f50;
 }
 
-table.width66{
-margin-left: auto;
-margin-right: auto;
-}
-
 /* Override js/jquery-ui.custom.css            */
 
 /* Flyout changes */
@@ -314,23 +307,12 @@ color: #003399;
 }
 
 /*	Start Standard Code					*/
-
-div.blockcontent {
-margin-left:auto;
-border:1pt solid #999;
-margin-right:5px;
-margin-bottom:10px;
-font-size: 13px;
-overflow:auto;
-}
-
 #content {
 width:auto;
+background:#FFF;
 margin:3px;
 padding:10px;
-background: #fff;
 }
-
 
 #pid {
 color:#333;
@@ -364,68 +346,25 @@ width:100%;
 color:#333333;
 }
 
-#index_small_blocks .blockheader {
-width:100%;
-caption-side:top;
-margin:0;
-padding:0;
-overflow:hidden;
+.block {
+color: #030303;
+font: 12px tahoma, arial, helvetica, sans-serif;
+vertical-align: top;
+margin-bottom: 5px;
+padding: 1px;
 }
 
-#index_small_blocks .blockh2 {
-width:auto;
-}
-
-#index_small_blocks .blockhc .help .icon,
-#index_small_blocks .blockhc .adminicon,
-#index_main_blocks .blockh2 .icon,
-#index_main_blocks .blockh2 .adminicon {
-position:relative;
-text-align:right;
-top:3px;
-}
-
-#index_small_blocks .blockcontent {
-width:auto;
-caption-side: right;  
-margin-right:2px;
-}
-
-#index_main_blocks .blockheader {
-caption-side: left;
-}
-
-#index_main_blocks .blockh2,
-#index_small_blocks .blockhc {
-white-space:nowrap;
-overflow:hidden;
-}
-
-#index_main_blocks .blockcontent {
-padding:5px;
-margin-left:0;
-margin-right:2px;
-}
-
-.small_inner_block {
+div.blockcontent {
+border: solid #999 1px;
+margin-left:auto;
+margin-right:2px;  /* changed from auto for right side match to header */
+margin-bottom:10px;
+font-size: 13px;
 overflow:auto;
-font-size: 13px; /* changed from 10 to 13 */
-text-decoration:none;
-max-height:420px;
-width:auto;
-padding:0 5px;
-}
-
-.normal_inner_block {
-overflow: auto;
+padding: 5px;
 }
 
 .blockheader {
-table-layout:fixed;
-height:25px;
-max-height:25px;
-line-height:25px;
-vertical-align:top;
 width:100%;
 }
 
@@ -441,9 +380,6 @@ background-image:url(images/left2.gif);
 background-repeat:repeat-x;
 font-size: 13px;
 font-weight:bold;
-height:24px;
-max-height:24px;
-line-height:25px;
 }
 
 .blockh3 {
@@ -455,14 +391,7 @@ height:24px;
 
 .blockhc {
 padding-right:15px;
-padding-left:5px;
-overflow:hidden;
-}
-
-.blockhc {
-padding-right:15px;
-padding-left:5px;
-overflow:hidden;
+padding-top: 2px;
 }
 
 #login_block .blockh1 {
@@ -696,6 +625,11 @@ vertical-align:top;
 
 .list_label, .list_value {
 white-space: nowrap;
+}
+
+table.width66 {
+margin-left: auto;
+margin-right: auto;
 }
 
 .list_label_wrap, .list_value_wrap {
@@ -1074,6 +1008,7 @@ color:#000;
 .block {
 color: #030303;
 vertical-align: top;
+
 }
 
 .news_box {
@@ -1677,7 +1612,7 @@ margin: 0;
 /* Classes for the INDI page header */
 
 #indi_header h1 {
-	color: #00066;
+	color: #000066;
 	font-size: 2em;
 	padding: 0 .5em;
 	margin: 0.25em 0 0 0;
@@ -1875,6 +1810,7 @@ font-weight: bold;
 font-size: 90%;
 padding: 0 10px;
 }
+
 /* Use CSS menus based on nested <ul> */
 .makeMenu li {
 	display:inline;
@@ -1886,6 +1822,7 @@ padding: 0 10px;
 	display:none;
 	position:absolute;
 	left:0px;
+	top: 1.0em;
 	background-color:#FFF;
 	border:thin solid #AAA;
 	z-index:999;
